--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>CodeDeploy Github Demo App</title>
-    </head>
-    <body>
-        <h1>This is a test</h1>
-    </body>
+<head>
+    <title>CodeDeploy Github Demo App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/dist/output.css" rel="stylesheet">
+</head>
+<body>
+<div class="container mx-auto max-h-full">
+    <h1 class="text-3xl text-center">CodeDeploy Github Demo App</h1>
+    <div class="flex justify-center content-center">
+        <figure class="max-w-lg">
+            <img class="h-auto max-w-full rounded-lg" src="/images/cookie.jpeg" alt="Cookie">
+            <figcaption class="mt-2 text-sm text-center text-gray-500 dark:text-gray-400">Here, have a cookie
+            </figcaption>
+        </figure>
+    </div>
+</div>
+</body>
 </html>
